# ec

baseboard/intelrvp/: led_states.c
baseboard/trogdor/: usb_pd_policy.c
board/agah/: led.c
board/anahera/: led.c
board/asurada/: led.c
board/banshee/: led.c
board/beadrix/: led.c
board/berknip/: led.c
board/blipper/: board.h
board/bloog/: led.c
board/boxy/: board.c
board/burnet/: led.c
common/: build.mk  charge_state.c  charge_state_v2.c  led_onoff_states.c  led_policy_std.c  led_pwm.c  lightbar.c  pwm.c
include/: adc.h  charge_state.h  charge_state_v2.h
test/: build.mk  sbs_charging_v2.c
zephyr/: .checkpatch.conf  CMakeLists.txt  CMakeLists2.txt  Kconfig  Kconfig.battery  Kconfig.keyboard  Kconfig.led  Kconfig.tasks  Kconfig.usbc  Kconfig2  OWNERS  PRESUBMIT.cfg  firmware_builder.py  import-sdk.py
zephyr/projects/chameleon/: CMakeLists.txt  README.md  prj.conf
zephyr/projects/chameleon/boards/arm/chameleon/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.cmake  chameleon.dts  chameleon.yaml  chameleon_defconfig  pinmux.c
zephyr/projects/chameleon/doc/: README.md  fpgaboot_sm.dot  fpgaboot_sm.md  unittest.md  zephyr_gpio.md
zephyr/projects/chameleon/include/: Si5338-CLK24-Registers.h  fpgaboot.h  fpgaboot_sm.h  gpio_signal.h  i2c_switch.h  led.h  misc_io.h  sd.h  sysmon.h  videomux.h
zephyr/projects/chameleon/src/: fpgaboot.c  fpgaboot_sm.c  i2c_switch.c  led.c  led.h  main.c  misc_io.c  sd.c  si5338.c  sysmon.c  sysmon.h  videomux.c
zephyr/projects/chameleon/tests/fpgaboot_sm/: CMakeLists.txt  fpgaboot_sm_test.c  prj.conf
(+142 files in other folders)
